--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 
     <section id="code-architecture">
         <h2>Code Architecture</h2>
-        <p>Focused on the code for the main menu and pause menu, implemented fully using Unreal Engine's Blueprint system. Also worked on the UI for the widgets. Implemented the save/load functionalities, incorporated within the main and pause menus. That took the most time, since incorporating so many connected things was confusing. Most of the work for Save/Load is done in GameInstance, where I created the functions.</p>
+        <div class="screenshot">
+            <img src="UML.png" alt="Screenshot of Blueprint">
+        </div>
+        <p>I focused on the code for the main menu and pause menu, implemented fully using Unreal Engine's Blueprint system. Also worked on the UI for the widgets. Implemented the save/load functionalities, incorporated within the main and pause menus. That took the most time, since incorporating so many connected things was confusing. Most of the work for Save/Load is done in GameInstance, where I created the functions.</p>
         <div class="screenshot">
             <img src="MainMenu1.png" alt="Screenshot of Blueprint">
         </div>
